fix: add delay at startup and redirect logic for docker